# netbrain-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: lessons.md  plan.md  todo.md
src/netbrain_mcp/: __init__.py  client.py  config.py  models.py  server.py
tests/: test_client.py  test_models.py  test_server.py
